@@ -6,6 +6,7 @@ Mane changes:
 - Enabled most server movement variables. The server host can change most of these in the server settings.
 - Increased sv_airaccelerate from 10 to 150. This allows for easier air control when bunnyhopping.
 - Added a randomizer mode!
+	- Server hosts can change what weapons players spawn with the weapons.txt in the scripts folder. Please note that this will change the amount of weapons you can spawn with when you use impulse 101.
 - Your Railgun beam's color will now change based on your primary player color.
 - Reverted back to the original Half-Life 2 Deathmatch spawn algorithm, while retaining support for Counter-Strike Source and Day of Defeat Source spawnpoints.
 
